@@ -49,10 +49,9 @@ uint64	tu_timer::get_profile_ticks()
 
 	// Return microseconds.
 	struct timeval tv;
-	struct timezone tz;
 	uint64 result;
 	
-	gettimeofday(&tv, &tz);
+	gettimeofday(&tv, 0);
 
 	result = tv.tv_sec * 1000000;
 	result += tv.tv_usec;
